<resources>
    <string name="app_name">Welcome M</string>
    <string name="helloString">Привіт,</string>
    <string name="scanQRString">Сканувати накладну</string>
    <string name="pathwayString">Маршрут</string>
    <string name="orderHistoryString">Історія замовлень</string>
    <string name="workHoursString">Робочий час</string>
    <string name="settingsString">Налаштування</string>
    <string name="logoutString">Вийти</string>
    <string name="loginString">Логін</string>
    <string name="passwordString">Пароль</string>
    <string name="rememberString">Запам\'ятати</string>
    <string name="signInString">Увійти</string>
    <string name="sumString">Сума: </string>
    <string name="addressString">Адреса: </string>
    <string name="deliveredString">Доставлено: </string>
    <string name="clientNameString">Замовник: </string>
    <string name="clientTelephoneString">Моб. номер клієнта: </string>
    <string name="clientBalanceString">Баланс клієнта: </string>
    <string name="managerNameString">Менеджер: </string>
    <string name="managerTelephoneString">Моб. номер менеджера: </string>
    <string name="yourWorkHoursString">Ваші години</string>
    <string name="dayString">День: </string>
    <string name="startString">Початок: </string>
    <string name="endString">Кінець:</string>
    <string name="overtimeString">Понаднормово:</string>
    <string name="shorttimeString">Менше на: </string>
    <string name="loadingString">Завантажую…</string>
    <string name="bothPermissionString">Потрібно надати повноваження на використання камери</string>
    <string name="okString">Добре</string>
    <string name="cancelString">Відмовити</string>
    <string name="processingString">Обробляю…</string>
    <string name="incorrectQRString">Некорректний QR код!</string>
    <string name="ordersHistoryString">Історія замовлень</string>
    <string name="orderIdString">№</string>
    <string name="sqlErrorRetryString">Виникла помилка при завантаженні</string>
    <string name="overallOvertimeForGivenDayString">Всього перероблено на:</string>
    <string name="pathwaysString">Замовлення, що очікують доставки</string>
    <string name="payInProcessString">Оплата у процессі…</string>
    <string name="paymentMadeString">Успішно сплачено</string>
    <string name="waitUntilItLoadsString">Зачекайте поки закінчиться завантаження данних</string>
    <string name="incorrectInputString">Неправильно введено данні</string>
    <string name="monthOvertimeString">Понаднормової роботи за місяць:</string>
    <string name="sumOfMoneyTakenFromClientString">Сума отримана від клієнта</string>
    <string name="payText">Оплатити</string>
    <string name="enterMoneyFromClient">Введіть суму, отриману від клієнта</string>
    <string name="seemsYouveDoneYourWorkForTodayString">Схоже, ви виконали всі замовлення на сьогодні!</string>
    <string name="lastOrderMandeYouAreFree">Ваше останнє замовлення виконано, ви вільні</string>
    <string name="errorHappenedString">Трапилась помилка, спробуйте ще</string>
    <string name="workToDoString">Потрібно виконати ще замовлень:</string>
</resources>
